crates/celox/tests/snapshots/flip_flop__ff_common_load_hoisting_sir.snap
---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r3: logic<8>
      r4: logic<8>
      r5: logic<8>
    b0:
      Commit(src=a (region=0), dst=a (region=1), offset=0, bits=8)
      Commit(src=b (region=0), dst=b (region=1), offset=0, bits=8)
      Jump(b1)
    b1:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r5 = Load(addr=d (region=0), offset=0, bits=8)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b2 : b3)
    b2:
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 5)
      Jump(b4)
    b3:
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 5)
      Jump(b4)
    b4:
      Jump(b5)
    b5:
      Commit(src=a (region=1), dst=a (region=0), offset=0, bits=8)
      Commit(src=b (region=1), dst=b (region=0), offset=0, bits=8)
      Return
Trigger Group: rst (AbsoluteAddr(inst0, var1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r3: logic<8>
      r4: logic<8>
      r5: logic<8>
    b0:
      Commit(src=a (region=0), dst=a (region=1), offset=0, bits=8)
      Commit(src=b (region=0), dst=b (region=1), offset=0, bits=8)
      Jump(b1)
    b1:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r5 = Load(addr=d (region=0), offset=0, bits=8)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b2 : b3)
    b2:
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 5)
      Jump(b4)
    b3:
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 5)
      Jump(b4)
    b4:
      Jump(b5)
    b5:
      Commit(src=a (region=1), dst=a (region=0), offset=0, bits=8)
      Commit(src=b (region=1), dst=b (region=0), offset=0, bits=8)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
