crates/celox/tests/snapshots/flip_flop__ff_dynamic_store_sir.snap
---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: logic<2>
      r2: bit<2>
      r3: bit<1>
    b0:
      r0 = Load(addr=val (region=0), offset=0, bits=8)
      r1 = Load(addr=i (region=0), offset=0, bits=2)
      r2 = ToTwoState r1
      r3 = r1 EqCase r2
      Branch(r3 ? b1 : b2)
    b1:
      Store(addr=a (region=2), offset=element(r1, width=8, bit=0), bits=8, src_reg = 0)
      Jump(b2)
    b2:
      Commit(src=a (region=2), dst=a (region=0), offset=0, bits=32)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
