crates/celox/tests/snapshots/flip_flop__ff_function_array_literal_view_sir.snap
---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: logic<8>
      r2: logic<8>
      r3: logic<8>
      r4: bit<64>
      r5: bit<64>
      r6: bit<64>
      r7: bit<64>
      r8: logic<8>
      r9: logic<2>
      r10: bit<2>
      r11: bit<1>
      r12: logic<8>
      r13: logic<8>
      r14: logic<8>
    b0:
      Commit(src=out_q (region=0), dst=out_q (region=1), offset=0, bits=8)
      r0 = Load(addr=in0 (region=0), offset=0, bits=8)
      r1 = Load(addr=in1 (region=0), offset=0, bits=8)
      r2 = Load(addr=in2 (region=0), offset=0, bits=8)
      r3 = Load(addr=in3 (region=0), offset=0, bits=8)
      r9 = Load(addr=index (region=0), offset=0, bits=2)
      r4 = SIRValue(0x0)
      Store(addr=select.x (region=1), offset=element(r4, width=8, bit=0), bits=8, src_reg = 0)
      r5 = SIRValue(0x1)
      Store(addr=select.x (region=1), offset=element(r5, width=8, bit=0), bits=8, src_reg = 1)
      r6 = SIRValue(0x2)
      Store(addr=select.x (region=1), offset=element(r6, width=8, bit=0), bits=8, src_reg = 2)
      r7 = SIRValue(0x3)
      Store(addr=select.x (region=1), offset=element(r7, width=8, bit=0), bits=8, src_reg = 3)
      r10 = ToTwoState r9
      r11 = r9 EqCase r10
      r12 = SIRValue(0x0, mask=0xff)
      Branch(r11 ? b1 : b2 [r12])
    b1:
      r14 = Load(addr=select.x (region=1), offset=element(r9, width=8, bit=0), bits=8)
      Jump(b2 [r14])
    b2:
      params: [r13]
      Store(addr=out_q (region=0), offset=0, bits=8, src_reg = 13)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
