crates/celox/tests/snapshots/flip_flop__ff_function_call_multistatement_hoisting_sir.snap
---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: bit<8>
      r2: logic<1>
      r3: bit<1>
      r5: bit<8>
      r6: logic<8>
      r8: bit<8>
      r9: logic<8>
      r10: logic<8>
    b0:
      r0 = Load(addr=d (region=0), offset=0, bits=8)
      r1 = SIRValue(0x0)
      r2 = r0 Eq r1
      r3 = ToTwoState r2
      r5 = SIRValue(0x1)
      r6 = r0 Add r5
      r8 = SIRValue(0x2)
      r9 = r0 Add r8
      r10 = Mux(cond=r3, then=r6, else=r9)
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 10)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
