crates/celox/tests/snapshots/flip_flop__store_coalescing_sir.snap
---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: logic<8>
      r2: logic<8>
      r3: logic<8>
      r4: bit<32>
    b0:
      Commit(src=mem (region=0), dst=mem (region=1), offset=0, bits=32)
      r0 = Load(addr=a (region=0), offset=0, bits=8)
      r1 = Load(addr=b (region=0), offset=0, bits=8)
      r2 = Load(addr=c (region=0), offset=0, bits=8)
      r3 = Load(addr=d (region=0), offset=0, bits=8)
      r4 = Concat(r3, r2, r1, r0)
      Store(addr=mem (region=1), offset=packed_elements(bit=0, element_width=8), bits=32, src_reg = 4)
      Commit(src=mem (region=1), dst=mem (region=0), offset=0, bits=32)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
